--- a/advertisement.html
+++ b/advertisement.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Advertisements • Rose Digital Imaging</title>
+    <title>Advertisements</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -126,7 +126,146 @@
       </div>
     </nav>
     <main class="container mt-4 flex-shrink-0">
-      <h1>Our Advertisement Designs</h1>
+      <h1 class="Title">Advertisement Designs</h1>
+      <p class="text-center lead mb-5">
+        Crafting compelling visuals that capture attention and drive results.
+      </p>
+
+      <div class="row g-4">
+        <!-- Advertisement 1 -->
+        <div class="col-12 col-lg-6">
+          <div class="advertisement-card">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img
+                  src="./images/Advertisements/ad1.jpg"
+                  class="img-fluid advertisement-image"
+                  alt="Advertisement for Nisan Leaf"
+                />
+              </div>
+              <div class="col-md-7 d-flex flex-column">
+                <div class="card-body">
+                  <h5 class="card-title">Nisan Leaf</h5>
+                  <p class="card-text">
+                    A proposal for an advertisement showcasing at the time the
+                    brand new Nisan Leaf. This was on of Nisans first full
+                    electric models. It was ment to showcase Nisans move to
+                    green technology.
+                  </p>
+                  <div class="text-center w-100 mt-auto">
+                    <a
+                      href="./images/Advertisements/ad1.jpg"
+                      class="btn btn-gradient"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >View Full Image</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Advertisement 2 -->
+        <div class="col-12 col-lg-6">
+          <div class="advertisement-card">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img
+                  src="./images/Advertisements/ad2.jpg"
+                  class="img-fluid advertisement-image"
+                  alt="Advertisement NSAC Campaign 2013"
+                />
+              </div>
+              <div class="col-md-7 d-flex flex-column">
+                <div class="card-body">
+                  <h5 class="card-title">Glidden NSAC Campaign</h5>
+                  <p class="card-text">
+                    This campaign focused on building brand awareness through a
+                    visually striking and memorable design. It was set up as a
+                    magazine add where you would peal the tab and remove the
+                    paint can lid reveal the color code and inspiration.
+                  </p>
+                  <div class="text-center w-100 mt-auto">
+                    <a
+                      href="./images/Advertisements/ad2.jpg"
+                      class="btn btn-gradient"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >View Full Image</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Add more advertisements here. I'll duplicate the first two for demonstration. -->
+        <div class="col-12 col-lg-6">
+          <div class="advertisement-card">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img
+                  src="./images/Advertisements/ad3.jpg"
+                  class="img-fluid advertisement-image"
+                  alt="Advertisement Glidden NSAC Campaign 2013"
+                />
+              </div>
+              <div class="col-md-7 d-flex flex-column">
+                <div class="card-body">
+                  <h5 class="card-title">Glidden NSAC Campaign</h5>
+                  <p class="card-text">
+                    This was another of the adds we designed as a team. These
+                    along with countless other designs won us our district
+                  </p>
+                  <div class="text-center w-100 mt-auto">
+                    <a
+                      href="./images/Advertisements/ad3.jpg"
+                      class="btn btn-gradient"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >View Full Image</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="advertisement-card">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img
+                  src="./images/Advertisements/ad4.jpg"
+                  class="img-fluid advertisement-image"
+                  alt="Advertisement for National Domestic Violence Hotline"
+                />
+              </div>
+              <div class="col-md-7 d-flex flex-column">
+                <div class="card-body">
+                  <h5 class="card-title">National Domestic Violence Hotline</h5>
+                  <p class="card-text">
+                    A simple yet powerful design shocasing the damage words can
+                    do when you feel like you have no way out.
+                  </p>
+                  <div class="text-center w-100 mt-auto">
+                    <a
+                      href="./images/Advertisements/ad4.jpg"
+                      class="btn btn-gradient"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >View Full Image</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- Footer -->
     <footer class="site-footer mt-auto py-4">
@@ -156,51 +295,11 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Theme switcher logic
-      document.addEventListener("DOMContentLoaded", () => {
-        const getStoredTheme = () => localStorage.getItem("theme");
-        const setStoredTheme = (theme) => localStorage.setItem("theme", theme);
-
-        const getPreferredTheme = () => {
-          const storedTheme = getStoredTheme();
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-
-        const setTheme = (theme) => {
-          if (
-            theme === "auto" &&
-            window.matchMedia("(prefers-color-scheme: dark)").matches
-          ) {
-            document.documentElement.setAttribute("data-bs-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-bs-theme", theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        document.querySelectorAll("[data-bs-theme-value]").forEach((toggle) => {
-          toggle.addEventListener("click", () => {
-            const theme = toggle.getAttribute("data-bs-theme-value");
-            setStoredTheme(theme);
-            setTheme(theme);
-            // Update active icons
-            const isDark =
-              document.documentElement.getAttribute("data-bs-theme") === "dark";
-            document
-              .getElementById("light-theme-icon")
-              .classList.toggle("d-none", isDark);
-            document
-              .getElementById("dark-theme-icon")
-              .classList.toggle("d-none", !isDark);
-          });
-        });
-      });
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
