--- a/logo.html
+++ b/logo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Logos • Rose Digital Imaging</title>
+    <title>Logos</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -139,7 +139,10 @@
               alt="pantheon of old logo"
             />
             <div class="logo-description">
-              <p>A gaming community Named "Pantheon of Old" was looking for an image expressing their intrest of fallen Sparten soldiers</p>
+              <p>
+                A gaming community Named "Pantheon of Old" was looking for an
+                image expressing their intrest of fallen Sparten soldiers
+              </p>
             </div>
           </div>
         </div>
@@ -152,7 +155,10 @@
               alt="Logo for Work Care Occupational health"
             />
             <div class="logo-description">
-              <p>Was tasked with depicting a logo for a rebranding of a doctors office that restructured their work to helping the working man</p>
+              <p>
+                Was tasked with depicting a logo for a rebranding of a doctors
+                office that restructured their work to helping the working man
+              </p>
             </div>
           </div>
         </div>
@@ -165,7 +171,7 @@
               alt="Telecommunications logo"
             />
             <div class="logo-description">
-              <p>A logo made for a fictional telecom company </p>
+              <p>A logo made for a fictional telecom company</p>
             </div>
           </div>
         </div>
@@ -178,7 +184,10 @@
               alt="Bad Lungs Record logo"
             />
             <div class="logo-description">
-              <p>A friends band in florida asked me to create an image that can be pressed onto their upcoming reocrd</p>
+              <p>
+                A friends band in florida asked me to create an image that can
+                be pressed onto their upcoming reocrd
+              </p>
             </div>
           </div>
         </div>
@@ -189,7 +198,12 @@
               class="img-fluid logo-image"
               alt="Dyslektic Labs Logo"
             />
-            <div class="logo-description"><p>Dyslektic Labs is a design brand that reached out to see what i could put together for their start up</p></div>
+            <div class="logo-description">
+              <p>
+                Dyslektic Labs is a design brand that reached out to see what i
+                could put together for their start up
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
@@ -199,7 +213,12 @@
               class="img-fluid logo-image"
               alt="Benjamin Rose Branding"
             />
-            <div class="logo-description"><p>Something clean modern and professional to use for an Insurance Agent</p></div>
+            <div class="logo-description">
+              <p>
+                Something clean modern and professional to use for an Insurance
+                Agent
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
@@ -209,7 +228,9 @@
               class="img-fluid logo-image"
               alt="Rose Digital Imaging Logo"
             />
-            <div class="logo-description"><p>The design I came up with for Rose Digital Imaging</p></div>
+            <div class="logo-description">
+              <p>The design I came up with for Rose Digital Imaging</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
@@ -219,7 +240,12 @@
               class="img-fluid logo-image"
               alt="Saphire Shine Logo"
             />
-            <div class="logo-description"><p>Saphire Shine reached out and asked for a design to represent their auto detailing venture</p></div>
+            <div class="logo-description">
+              <p>
+                Saphire Shine reached out and asked for a design to represent
+                their auto detailing venture
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -252,51 +278,11 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Theme switcher logic
-      document.addEventListener("DOMContentLoaded", () => {
-        const getStoredTheme = () => localStorage.getItem("theme");
-        const setStoredTheme = (theme) => localStorage.setItem("theme", theme);
-
-        const getPreferredTheme = () => {
-          const storedTheme = getStoredTheme();
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-
-        const setTheme = (theme) => {
-          if (
-            theme === "auto" &&
-            window.matchMedia("(prefers-color-scheme: dark)").matches
-          ) {
-            document.documentElement.setAttribute("data-bs-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-bs-theme", theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        document.querySelectorAll("[data-bs-theme-value]").forEach((toggle) => {
-          toggle.addEventListener("click", () => {
-            const theme = toggle.getAttribute("data-bs-theme-value");
-            setStoredTheme(theme);
-            setTheme(theme);
-            // Update active icons
-            const isDark =
-              document.documentElement.getAttribute("data-bs-theme") === "dark";
-            document
-              .getElementById("light-theme-icon")
-              .classList.toggle("d-none", isDark);
-            document
-              .getElementById("dark-theme-icon")
-              .classList.toggle("d-none", !isDark);
-          });
-        });
-      });
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
