--- a/contactme.html
+++ b/contactme.html
@@ -138,7 +138,7 @@
             <input
               type="hidden"
               name="_next"
-              value="https://your-domain.com/success.html"
+              value="http://localhost/success.html"
             />
             <div class="row">
               <div class="col-md-6 mb-3">
@@ -247,6 +247,6 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
     crossorigin="anonymous">
     </script>
-    <script src="js/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
