--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rose Digital Imaging</title>
+    <title>RoseDigitalDesign</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -11,28 +11,11 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
-    <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <script>
-      // Prevents flash of unstyled content (FOUC)
-      (() => {
-        const storedTheme = localStorage.getItem("theme");
-        const getPreferredTheme = () => {
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-        document.documentElement.setAttribute(
-          "data-bs-theme",
-          getPreferredTheme()
-        );
-      })();
-    </script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
@@ -70,30 +53,22 @@
             </li>
             <li class="nav-item dropdown">
               <button
-                class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle"
-                id="bd-theme"
+                class="btn btn-link nav-link dropdown-toggle"
                 type="button"
-                aria-expanded="false"
+                id="theme-switcher"
                 data-bs-toggle="dropdown"
-                aria-label="Toggle theme (auto)"
+                aria-expanded="false"
               >
                 <i
-                  class="bi bi-sun-fill my-1 theme-icon-active"
-                  id="light-theme-icon"
-                ></i>
-                <i
-                  class="bi bi-moon-stars-fill my-1 theme-icon-active d-none"
-                  id="dark-theme-icon"
+                  class="bi bi-sun-fill theme-icon-active"
+                  data-theme-icon-active="bi-sun-fill"
                 ></i>
               </button>
-              <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="bd-theme"
-              >
+              <ul class="dropdown-menu" aria-labelledby="theme-switcher">
                 <li>
                   <button
-                    type="button"
                     class="dropdown-item d-flex align-items-center"
+                    type="button"
                     data-bs-theme-value="light"
                   >
                     <i class="bi bi-sun-fill me-2"></i> Light
@@ -101,8 +76,8 @@
                 </li>
                 <li>
                   <button
-                    type="button"
                     class="dropdown-item d-flex align-items-center"
+                    type="button"
                     data-bs-theme-value="dark"
                   >
                     <i class="bi bi-moon-stars-fill me-2"></i> Dark
@@ -110,8 +85,8 @@
                 </li>
                 <li>
                   <button
-                    type="button"
                     class="dropdown-item d-flex align-items-center"
+                    type="button"
                     data-bs-theme-value="auto"
                   >
                     <i class="bi bi-circle-half me-2"></i> Auto
@@ -318,7 +293,7 @@
           <a
             href="https://www.facebook.com/RoseDigitalDesign"
             class="social-icon"
-            aria-label="Facebook"
+            aria-label="Facebook" 
             ><i class="bi bi-facebook"></i
           ></a>
         </div>
@@ -329,10 +304,8 @@
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
     >
     </script>
-    <script src="js/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
