--- a/advertisement.html
+++ b/advertisement.html
@@ -11,15 +11,18 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     >
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="./css/style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     >
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -156,13 +159,14 @@
                     green technology.
                   </p>
                   <div class="text-center w-100 mt-auto">
-                    <a
-                      href="./images/Advertisements/ad1.jpg"
+                    <button
                       class="btn btn-gradient"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >View Full Image</a
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img-src="./images/Advertisements/ad1.jpg"
                     >
+                      View Full Image
+                    </button>
                   </div>
                 </div>
               </div>
@@ -186,16 +190,18 @@
                   <h5 class="card-title">Glidden NSAC Campaign</h5>
                   <p class="card-text">
                     This campaign focused on building brand awareness through a
-                    visually striking and memorable design fit as a magazine add. peal the lid and reveal a surprise. 
+                    visually striking and memorable design fit as a magazine
+                    add. peal the lid and reveal a surprise.
                   </p>
                   <div class="text-center w-100 mt-auto">
-                    <a
-                      href="./images/Advertisements/ad2.jpg"
+                    <button
                       class="btn btn-gradient"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >View Full Image</a
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img-src="./images/Advertisements/ad2.jpg"
                     >
+                      View Full Image
+                    </button>
                   </div>
                 </div>
               </div>
@@ -222,13 +228,14 @@
                     along with countless other designs won us our district
                   </p>
                   <div class="text-center w-100 mt-auto">
-                    <a
-                      href="./images/Advertisements/ad3.jpg"
+                    <button
                       class="btn btn-gradient"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >View Full Image</a
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img-src="./images/Advertisements/ad3.jpg"
                     >
+                      View Full Image
+                    </button>
                   </div>
                 </div>
               </div>
@@ -253,13 +260,14 @@
                     do when you feel like you have no way out.
                   </p>
                   <div class="text-center w-100 mt-auto">
-                    <a
-                      href="./images/Advertisements/ad4.jpg"
+                    <button
                       class="btn btn-gradient"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >View Full Image</a
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img-src="./images/Advertisements/ad4.jpg"
                     >
+                      View Full Image
+                    </button>
                   </div>
                 </div>
               </div>
@@ -268,6 +276,37 @@
         </div>
       </div>
     </main>
+
+    <!-- Image Modal -->
+    <div
+      class="modal fade"
+      id="imageModal"
+      tabindex="-1"
+      aria-labelledby="imageModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-content bg-transparent border-0">
+          <div class="modal-header border-0">
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body p-0 text-center">
+            <img
+              src=""
+              class="img-fluid"
+              id="modalImage"
+              alt="Full-size advertisement image"
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="site-footer mt-auto py-4">
       <div class="container text-center">
@@ -296,9 +335,11 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
-    crossorigin="anonymous">
-    </script>
-    <script src="./main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./Java/main.js"></script>
   </body>
 </html>
