--- a/contactme.html
+++ b/contactme.html
@@ -11,7 +11,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     >
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="./css/style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
@@ -250,6 +250,6 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
     crossorigin="anonymous">
     </script>
-    <script src="./main.js"></script>
+    <script src="./Java/main.js"></script>
   </body>
 </html>
