--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     >
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="./css/style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
@@ -60,6 +60,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./Java/main.js"></script>
   </body>
 </html>
