--- a/contactme.html
+++ b/contactme.html
@@ -136,12 +136,12 @@
           </p>
 
           <!-- IMPORTANT: Replace the action URL with your own from Formspree.io -->
-          <form action="https://formspree.io/f/xjkangae" method="POST">
+          <form action="https://formspree.io/f/xjkangae" method="post">
             <!-- This hidden input tells Formspree where to redirect after submission -->
             <input
               type="hidden"
               name="_next"
-              value="https://rosedigitalimaging.com/contactme/success.html"
+              value="https://rosedigitalimaging.com/success.html"
             >
             <div class="row">
               <div class="col-md-6 mb-3">
